--- a/UnitySRP/Assets/UnitySRP/SRP/LightweightPipeline/Sources/Editor/Lightweight.Editor.asmdef
+++ b/UnitySRP/Assets/UnitySRP/SRP/LightweightPipeline/Sources/Editor/Lightweight.Editor.asmdef
@@ -1,6 +1,9 @@
 {
-    "name": "Lightweight.Runtime",
+    "name": "Lightweight.Editor",
     "references": [
+        "LycorisCore.Runtime",
+        "LycorisCore.Editor",
+        "Lightweight.Runtime"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
